2011-01-21 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-main-window.c (nact_main_window_new):
	Initialize the main window with XML UI properties.

	* src/nact/base-window.c:
	* src/nact/base-window.h: Rename initialization properties.

	* src/nact/nact-add-capability-dialog.c:
	* src/nact/nact-add-scheme-dialog.c:
	* src/nact/nact-assistant-export.c:
	* src/nact/nact-assistant-import.c:
	* src/nact/nact-confirm-logout.c:
	* src/nact/nact-export-ask.c:
	* src/nact/nact-icon-chooser.c:
	* src/nact/nact-main-window.c:
	* src/nact/nact-preferences-editor.c: Updated accordingly.

	* src/nact/base-application.c:
	* src/nact/base-application.h:
	Define new 'base-application-description' property.
	Remove unused properties.

	* src/nact/nact-application.c (nact_application_new):
	Make use of the new property at instanciation time.

2011-01-20 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/base-window.c:
	* src/nact/base-window.h (base_window_display_error_dlg): New function.

	* src/nact/base-application.c:
	* src/nact/base-application.h (base_application_get_icon_name):
	Removed function.

	* src/nact/base-application.c:
	* src/nact/base-application.h
	(initialize_i18n, initialize_application_name, get_application_name,
	initialize_default_icon, get_icon_name, initialize_gtk,
	initialize_session_manager, get_unique_app_name, initialize_ui,
	initialize_unique_app, initialize, run, get_main_window,
	initialize_application): Remove virtual methods.

	* src/nact/nact-application.c (appli_get_application_name,
	appli_get_icon_name, appli_get_unique_app_name,
	appli_initialize_application):  Removed functions.

	* src/nact/nact-application.c (nact_application_new_with_args):
	Make NactApplication initializes with these new properties.

	* src/nact/base-application.c:
	* src/nact/base-application.h: Define new properties.

	* src/nact/base-application-class.h: Removed file.

	* src/nact/Makefile.am:
	* src/nact/base-application.h:
	* src/nact/base-window-class.h: