@@ -1,5 +1,7 @@
 2011-01-21 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/nact/base-window.c (base_window_init): Rewrite BaseWindow initialization.
+
 	* src/nact/nact-main-window.c (nact_main_window_new):
 	Initialize the main window with XML UI properties.
 
